--- a/style.css
+++ b/style.css
@@ -5,16 +5,29 @@
 }
 
 #intro {
-  display: none;
+  display: block;
+  /* display: none; */
 }
 
 #intro-content {
   display: flex;
+  /* display: none; */
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   text-align: center;
   margin-top: 15%;
+  width: 50%;
+}
+
+#questions-container {
+  display: none;
+  /* display: flex; */
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  text-align: left;
+  margin-top: 10%;
   width: 50%;
 }
 
@@ -42,6 +55,7 @@
 }
 
 #finished-container {
+  display: none;
   width: 50%;
   text-align: left;
   margin-top: 10%;
