--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  margin-top: 15%;
-  width: 50%;
+  margin-top: 5%;
+  width: 70%;
 }
 
 #questions-container {
@@ -27,18 +27,17 @@
   justify-content: space-between;
   align-items: flex-start;
   text-align: left;
-  margin-top: 10%;
+  margin-top: 5%;
   width: 50%;
 }
 
 #question-display {
   display: none;
-  /* display: flex; */
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
   text-align: left;
-  margin-top: 10%;
+  margin-top: 5%;
   width: 50%;
 }
 
@@ -56,7 +55,14 @@
 
 #finished-container {
   display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
   width: 50%;
   text-align: left;
-  margin-top: 10%;
+}
+
+#highscoreContainer {
+  display: none;
+  width: 50%;
 }
